# aqilas-sms

./: .gitignore  README.md  pyproject.toml  setup.py
sms/: __init__.py  aqilas.py  types.py
src/aqilas/: __init__.py  base.py  main.py  types.py  utils.py
test/: test.py  test_sms.py
